attempt to fix wrapping issues

--- a/frontend/src/styles/SCSS/Calendar.scss
+++ b/frontend/src/styles/SCSS/Calendar.scss
@@ -124,7 +124,7 @@ h2 {
   }
 
   .custom-event-title {
-    word-wrap: break-word;
+    word-wrap: break-word !important;
   }
 
 
